frontend/test/should_fail/exec_disjoint_type_as_argument.grg
using deep_model_001;

rule r(y : A) {
  n : B;
  modify{
    exec(r(n)); // disjoint type as argument
  }
}
